--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -59,6 +59,7 @@
                 android:nestedScrollingEnabled="false" />
 
             <Button
+                android:layout_margin="5dp"
                 android:id="@+id/removepic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
