--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -90,7 +90,7 @@
 
 
     <com.github.mmin18.widget.RealtimeBlurView
-        app:realtimeOverlayColor="@color/owhite"
+        app:realtimeOverlayColor="@color/lwhite"
         android:visibility="gone"
         app:realtimeBlurRadius="25dp"
         android:id="@+id/rootblur"
