--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:hapticFeedbackEnabled="true"
     android:layout_marginBottom="5dp"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:animateLayoutChanges="true"
     android:background="@color/white">
@@ -16,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:orientation="vertical">
+
         <LinearLayout
             android:id="@+id/quotetop"
             android:foreground="?attr/selectableItemBackground"
@@ -23,15 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp">
-            <ImageButton
-                android:visibility="gone"
-                android:id="@+id/reported"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/transparent"
-                android:src="@drawable/ic_flag"
-                android:tint="@color/red_500"
-                />
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_gravity="center"
@@ -103,8 +97,7 @@
             app:cardElevation="0dp">
 
             <LinearLayout
-                android:padding="20dp"
-                android:layout_width="match_parent"
+                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -130,6 +123,7 @@
                     android:textStyle="italic"
 
                     android:typeface="normal" />
+
             </LinearLayout>
 
 
